// Vitest Snapshot v1

exports[`Task: config-lint > create .eslintrc.js if not existed 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependency @types/node...
[DATA] Installing devDependency @typescript-eslint/eslint-plugin...
[DATA] Installing devDependency @typescript-eslint/parser...
[DATA] Installing devDependency eslint...
[DATA] Installing devDependency eslint-config-prettier...
[DATA] Installing devDependency eslint-plugin-prettier...
[DATA] Installing devDependency prettier...
[DATA] Installing devDependency typescript...
[SUCCESS] Install dependencies
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default eslint-related config
[SUCCESS] Create eslint config
"
`;

exports[`Task: config-lint > postLintSetup hook from user config 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependency @types/node...
[DATA] Installing devDependency @typescript-eslint/eslint-plugin...
[DATA] Installing devDependency @typescript-eslint/parser...
[DATA] Installing devDependency eslint...
[DATA] Installing devDependency eslint-config-prettier...
[DATA] Installing devDependency eslint-plugin-prettier...
[DATA] Installing devDependency prettier...
[DATA] Installing devDependency typescript...
[SUCCESS] Install dependencies
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from config
[DATA] Run postLintSetup from config
[SUCCESS] Create eslint config
"
`;

exports[`Task: config-lint > run custom config command with user config provided 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependency @types/node...
[DATA] Installing devDependency @typescript-eslint/eslint-plugin...
[DATA] Installing devDependency @typescript-eslint/parser...
[DATA] Installing devDependency eslint...
[DATA] Installing devDependency eslint-config-prettier...
[DATA] Installing devDependency eslint-plugin-prettier...
[DATA] Installing devDependency prettier...
[DATA] Installing devDependency typescript...
[SUCCESS] Install dependencies
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from config
[SUCCESS] Create eslint config
"
`;
